--- a/index.html
+++ b/index.html
@@ -870,73 +870,7 @@
 
  <section id="study-hub" style="background: #f0f4f8; padding: 100px 8%;">
     <h2 class="section-title">Study Resources</h2>
-    
-<div class="study-3d-grid">
-    <a href="syllabuslist.html" style="text-decoration: none; color: inherit;">
-        <div class="study-card-3d border-syll" data-aos="zoom-in" style="cursor: pointer;">
-            <div class="icon-box-3d">
-                <img src="https://cdn-icons-png.flaticon.com/512/3382/3382551.png" alt="Syllabus Icon">
-            </div>
-            <h4>Syllabus</h4>
-            <span class="status-msg" style="color: #0000ff; text-decoration: underline;">Click to Open Library</span>
-        </div>
-    </a>
-</div>
-
-        <div class="study-card-3d border-ncert" data-aos="zoom-in" data-aos-delay="100" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/2232/2232688.png"></div>
-            <h4>NCERT Books</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d border-pyq" data-aos="zoom-in" data-aos-delay="200" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/1001/1001371.png"></div>
-            <h4>Previous Year Q.</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d border-quiz" data-aos="zoom-in" data-aos-delay="300" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/864/864353.png"></div>
-            <h4>Current Affairs</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="400" style="border-bottom: 4px solid #9b59b6;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/2965/2965879.png"></div>
-            <h4>News Highlights</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="100" style="border-bottom: 4px solid #1abc9c;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/2641/2641409.png"></div>
-            <h4>Open Test</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="200" style="border-bottom: 4px solid #e67e22;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/1067/1067562.png"></div>
-            <h4>Mind Maps</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="300" style="border-bottom: 4px solid #34495e;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/1551/1551352.png"></div>
-            <h4>Infographics</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="400" style="border-bottom: 4px solid #d35400;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/3407/3407024.png"></div>
-            <h4>Daily Quiz</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-
-        <div class="study-card-3d" data-aos="zoom-in" data-aos-delay="500" style="border-bottom: 4px solid #7f8c8d;" onclick="notifySoon(this)">
-            <div class="icon-box-3d"><img src="https://cdn-icons-png.flaticon.com/512/3524/3524335.png"></div>
-            <h4>Others</h4>
-            <span class="status-msg">Data will be added soon</span>
-        </div>
-    </div>
+    Comming Soon...
 </section>
 
 <section class="whatsapp-3d-container">
@@ -1245,6 +1179,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
