--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@
     <h2 class="section-title">Study Resources</h2>
   <div id="button-section" class="button-container">
   <p>Library Portal</p>
-  <a id="dynamic-link" href="#" class="btn-primary" target="_blank">
+  <a id="dynamic-link" href="syllabuslist.html" class="btn-primary" target="_blank">
     Click here
   </a>
 </div>
@@ -1540,5 +1540,6 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
