--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="student.html">Help Desk</a></li>
                 <li><a href="commiunity.html">Commiunity</a></li>
+                <li><a href="login.html" class="login-btn"><i class="fas fa-user-circle"></i> Student Login</a></li>
             </ul>
         </nav>
     </header>
@@ -1540,6 +1541,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
