--- a/login.html
+++ b/login.html
@@ -1,159 +1,306 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEOID STUDY CENTRE | Portal</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #1e293b; 
-            --accent-color: #2563eb;  
-            --success-color: #059669;
-            --error-color: #dc2626;
-            --bg-gray: #f8fafc;
-        }
+<meta charset="UTF-8">
+<title>Geoid Study Centre | Student Portal</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        body { font-family: 'Inter', sans-serif; background-color: var(--bg-gray); margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        .container { background: #ffffff; width: 100%; max-width: 900px; display: flex; border-radius: 12px; overflow: hidden; box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1); min-height: 500px; }
-        .sidebar { flex: 1; background: var(--primary-color); padding: 40px; color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; }
-        .form-section { flex: 1.2; padding: 50px; text-align: center; }
-        .input-group { margin-bottom: 15px; text-align: left; }
-        .input-group label { display: block; font-size: 0.85rem; font-weight: 600; margin-bottom: 5px; }
-        input { width: 100%; padding: 12px; border: 1px solid #e2e8f0; border-radius: 8px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; background-color: var(--accent-color); color: white; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; margin-top: 10px; }
-        .hidden { display: none; }
-        #status-msg { margin-top: 15px; padding: 10px; border-radius: 6px; font-size: 0.85rem; display: none; }
-        .err { background: #fef2f2; color: var(--error-color); display: block; }
-        .ok { background: #f0fdf4; color: var(--success-color); display: block; }
-        
-        /* Dashboard Styles */
-        #dashboard-view { text-align: left; }
-        .user-info { background: #f1f5f9; padding: 20px; border-radius: 8px; margin-top: 20px; }
-        .logout-btn { background-color: #64748b; margin-top: 20px; }
-    </style>
+<style>
+body{
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    background:#ffffff;
+}
+
+/* ===== HEADER ===== */
+.header img{
+    width:100%;
+    max-height:240px;
+    object-fit:cover;
+    border-bottom:1px solid #ccc;
+}
+
+/* ===== LAYOUT ===== */
+.wrapper{display:flex}
+
+/* ===== SIDEBAR ===== */
+.sidebar{
+    width:120px;
+    background:#0b5ed7;
+}
+.sidebar a{
+    display:block;
+    color:#fff;
+    text-decoration:none;
+    font-size:13px;
+    padding:10px;
+    text-align:center;
+    border-bottom:1px solid rgba(255,255,255,.25);
+}
+.sidebar a:hover{background:#084298}
+
+/* ===== CONTENT ===== */
+.content{
+    flex:1;
+    padding:20px;
+    background:#f5fbff;
+}
+
+/* ===== BOX ===== */
+.portal-box{
+    border:1px solid #b6d7ea;
+    background:#fff;
+}
+.portal-title{
+    background:#d9edf7;
+    padding:8px 12px;
+    font-weight:bold;
+    color:#31708f;
+}
+
+/* ===== PORTAL BODY ===== */
+.portal-body{
+    display:flex;
+    padding:15px;
+}
+
+/* NOTICE */
+.notice{
+    flex:2;
+    margin-right:20px;
+}
+.notice-title{
+    background:#dff0d8;
+    color:#3c763d;
+    padding:6px 10px;
+    font-size:13px;
+    border:1px solid #d6e9c6;
+}
+.notice-box{
+    height:90px;
+    border:1px solid #d6e9c6;
+    margin-top:5px;
+    padding:5px;
+    font-size:12px;
+}
+
+/* LOGIN */
+.login{
+    flex:1;
+    border:1px solid #ebccd1;
+    background:#fdf7f7;
+    padding:10px;
+}
+.login-title{
+    background:#f2dede;
+    color:#a94442;
+    padding:6px;
+    font-weight:bold;
+}
+.login input{
+    width:100%;
+    padding:6px;
+    margin-top:8px;
+    font-size:12px;
+}
+.login button{
+    margin-top:10px;
+    padding:6px 12px;
+    background:#5bc0de;
+    border:none;
+    color:#fff;
+    cursor:pointer;
+    float:right;
+}
+.login p{
+    font-size:11px;
+    color:#a94442;
+    margin-top:10px;
+    clear:both;
+}
+
+/* FIND */
+.find-box{
+    margin-top:15px;
+    border:1px solid #b6d7ea;
+}
+.find-title{
+    background:#428bca;
+    color:#fff;
+    padding:8px 12px;
+}
+.find-body{
+    padding:20px;
+    text-align:center;
+}
+
+/* SIGNUP / DASHBOARD */
+.hidden{display:none}
+.dashboard{
+    background:#fff;
+    border:1px solid #b6d7ea;
+    padding:20px;
+}
+.status{font-size:12px;color:red;margin-top:5px}
+</style>
 </head>
+
 <body>
 
-    <div class="container">
-        <div class="sidebar" id="main-sidebar">
-            <h1>GEOID STUDY CENTRE</h1>
-            <p id="sidebar-text">Access your secure student portal for digital learning resources.</p>
+<!-- HEADER -->
+<div class="header">
+    <img src="https://ik.imagekit.io/8v5m0fw9z/Blue%20and%20White%20Modern%20Coming%20Soon%20Email%20Header.png" alt="Midnapore College">
+</div>
+
+<div class="wrapper">
+
+<!-- SIDEBAR -->
+<div class="sidebar">
+    <a href="#">Fees Payment</a>
+    <a href="#">Attendance</a>
+    <a href="#">Exam</a>
+    <a href="#">Library</a>
+    <a href="#">Notice</a>
+</div>
+
+<!-- CONTENT -->
+<div class="content">
+
+<!-- LOGIN VIEW -->
+<div id="login-view" class="portal-box">
+    <div class="portal-title">Student Portal</div>
+
+    <div class="portal-body">
+        <div class="notice">
+            <div class="notice-title"><strong>Notice</strong></div>
+            <div class="notice-box">
+                <strong>Data Will be add soon...</strong>
+            </div>
         </div>
 
-        <div class="form-section">
-            <div id="login-view">
-                <h2>Welcome Back</h2>
-                <form id="login-form">
-                    <div class="input-group"><label>Email</label><input type="email" id="login-email" required></div>
-                    <div class="input-group"><label>Password</label><input type="password" id="login-password" required></div>
-                    <button type="submit">Sign In</button>
-                </form>
-                <p>New student? <span style="color:var(--accent-color); cursor:pointer" onclick="toggleAuth()">Register</span></p>
-            </div>
+        <div class="login">
+            <div class="login-title">Login</div>
 
-            <div id="signup-view" class="hidden">
-                <h2>Registration</h2>
-                <form id="signup-form">
-                    <div class="input-group"><label>Full Name</label><input type="text" id="signup-name" required></div>
-                    <div class="input-group"><label>Email</label><input type="email" id="signup-email" required></div>
-                    <div class="input-group"><label>Password</label><input type="password" id="signup-password" required></div>
-                    <button type="submit">Create Account</button>
-                </form>
-                <p>Already have an account? <span style="color:var(--accent-color); cursor:pointer" onclick="toggleAuth()">Login</span></p>
-            </div>
+            <form id="login-form">
+                <input type="email" id="login-email" placeholder="Enter Email" required>
+                <input type="password" id="login-password" placeholder="Enter Password" required>
+                <button type="submit">Sign In</button>
+            </form>
 
-            <div id="dashboard-view" class="hidden">
-                <h2>Student Dashboard</h2>
-                <div class="user-info">
-                    <p><strong>Name:</strong> <span id="user-display-name">Loading...</span></p>
-                    <p><strong>Email:</strong> <span id="user-display-email">Loading...</span></p>
-                </div>
-                <p>Welcome to your portal. Here you can access your courses and marks.</p>
-                <button class="logout-btn" onclick="handleSignOut()">Sign Out</button>
-            </div>
-
-            <div id="status-msg"></div>
+            <p>
+                New Student?
+                <span style="color:#337ab7;cursor:pointer" onclick="toggleAuth()">Register</span>
+            </p>
+            <div id="status-msg" class="status"></div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script>
-        const SB_URL = 'https://vokowckwmrrlqzvfcxcl.supabase.co'; 
-        const SB_KEY = 'sb_publishable_oZMLBAUIUbepAtUeThvT7w_DP7Kaj5N';
-        const _supabase = supabase.createClient(SB_URL, SB_KEY);
+<!-- SIGNUP VIEW -->
+<div id="signup-view" class="portal-box hidden">
+    <div class="portal-title">Student Registration</div>
+    <div style="padding:20px">
+        <form id="signup-form">
+            <input type="text" id="signup-name" placeholder="Full Name" required><br><br>
+            <input type="email" id="signup-email" placeholder="Email" required><br><br>
+            <input type="password" id="signup-password" placeholder="Password" required><br><br>
+            <button>Create Account</button>
+        </form>
+        <p>
+            Already Registered?
+            <span style="color:#337ab7;cursor:pointer" onclick="toggleAuth()">Login</span>
+        </p>
+    </div>
+</div>
 
-        // Views
-        const loginView = document.getElementById('login-view');
-        const signupView = document.getElementById('signup-view');
-        const dashboardView = document.getElementById('dashboard-view');
-        const statusMsg = document.getElementById('status-msg');
+<!-- DASHBOARD -->
+<div id="dashboard-view" class="dashboard hidden">
+    <h2>Student Dashboard</h2>
+    <p><b>Name:</b> <span id="d-name"></span></p>
+    <p><b>Email:</b> <span id="d-email"></span></p>
+    <p>Welcome to Geoid Study Centre Student ERP Portal.</p>
+    <button onclick="logout()">Logout</button>
+</div>
 
-        function toggleAuth() {
-            loginView.classList.toggle('hidden');
-            signupView.classList.toggle('hidden');
-            statusMsg.style.display = 'none';
-        }
+</div>
+</div>
+<footer>
+    <strong>Designed By:Subhadip Satpati</strong>
+</footer>
 
-        function showDashboard(user) {
-            loginView.classList.add('hidden');
-            signupView.classList.add('hidden');
-            dashboardView.classList.remove('hidden');
-            document.getElementById('sidebar-text').innerText = "You are now logged in securely.";
-            
-            // ইউজার ডাটা দেখানো
-            document.getElementById('user-display-name').innerText = user.user_metadata.full_name || "N/A";
-            document.getElementById('user-display-email').innerText = user.email;
-        }
+<!-- SUPABASE -->
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script>
+const supabaseUrl = "https://vokowckwmrrlqzvfcxcl.supabase.co";
+const supabaseKey = "sb_publishable_oZMLBAUIUbepAtUeThvT7w_DP7Kaj5N";
+const sb = supabase.createClient(supabaseUrl, supabaseKey);
 
-        // লগইন চেক (Page Load হলে)
-        async function checkSession() {
-            const { data: { user } } = await _supabase.auth.getUser();
-            if (user) showDashboard(user);
-        }
-        checkSession();
+const loginView = document.getElementById("login-view");
+const signupView = document.getElementById("signup-view");
+const dashboardView = document.getElementById("dashboard-view");
+const statusMsg = document.getElementById("status-msg");
 
-        // Sign In
-        document.getElementById('login-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('login-email').value;
-            const password = document.getElementById('login-password').value;
+function toggleAuth(){
+    loginView.classList.toggle("hidden");
+    signupView.classList.toggle("hidden");
+}
 
-            const { data, error } = await _supabase.auth.signInWithPassword({ email, password });
-            if (error) {
-                statusMsg.innerText = error.message;
-                statusMsg.className = 'err';
-            } else {
-                showDashboard(data.user);
-            }
-        });
+function showDashboard(user){
+    loginView.classList.add("hidden");
+    signupView.classList.add("hidden");
+    dashboardView.classList.remove("hidden");
+    document.getElementById("d-name").innerText =
+        user.user_metadata?.full_name || "N/A";
+    document.getElementById("d-email").innerText = user.email;
+}
 
-        // Sign Out
-        async function handleSignOut() {
-            await _supabase.auth.signOut();
-            window.location.reload(); // পেজ রিফ্রেশ করলে আবার লগইন স্ক্রিন আসবে
-        }
+/* SESSION CHECK */
+(async()=>{
+    const { data } = await sb.auth.getUser();
+    if(data.user) showDashboard(data.user);
+})();
 
-        // Signup (আগের মতই থাকবে)
-        document.getElementById('signup-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('signup-name').value;
-            const email = document.getElementById('signup-email').value;
-            const password = document.getElementById('signup-password').value;
+/* LOGIN */
+document.getElementById("login-form").addEventListener("submit", async e=>{
+    e.preventDefault();
+    const email = document.getElementById("login-email").value;
+    const password = document.getElementById("login-password").value;
 
-            const { data, error } = await _supabase.auth.signUp({
-                email, password, options: { data: { full_name: name } }
-            });
+    const { data, error } = await sb.auth.signInWithPassword({ email, password });
+    if(error){
+        statusMsg.innerText = error.message;
+    }else{
+        showDashboard(data.user);
+    }
+});
 
-            if (error) {
-                statusMsg.innerText = error.message;
-                statusMsg.className = 'err';
-            } else {
-                statusMsg.innerText = "Success! Now please Login.";
-                statusMsg.className = 'ok';
-                toggleAuth();
-            }
-        });
-    </script>
+/* SIGNUP */
+document.getElementById("signup-form").addEventListener("submit", async e=>{
+    e.preventDefault();
+    const name = document.getElementById("signup-name").value;
+    const email = document.getElementById("signup-email").value;
+    const password = document.getElementById("signup-password").value;
+
+    const { error } = await sb.auth.signUp({
+        email,
+        password,
+        options:{ data:{ full_name:name } }
+    });
+
+    if(error){
+        alert(error.message);
+    }else{
+        alert("Registration successful. Please login.");
+        toggleAuth();
+    }
+});
+
+/* LOGOUT */
+async function logout(){
+    await sb.auth.signOut();
+    location.reload();
+}
+</script>
+
 </body>
 </html>
