--- a/index.html
+++ b/index.html
@@ -1368,6 +1368,7 @@
             <div>
                 <h3 style="color:var(--secondary); margin-bottom:20px;">GEOID STUDY CENTRE</h3>
                 <p style="font-size: 0.9rem; color:#bdc3c7;">Leading the way in Geographic education since inception. Join us to reshape your future.</p>
+                <p><strong>Last Update : 01/01/2026</strong></p>
             </div>
             <div class="footer-links">
                 <h4>Legal & Safety</h4>
@@ -1393,7 +1394,7 @@
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1467237/t/0"></script>   
 
         <p style="margin-top:20px; font-size: 0.8rem; opacity: 0.5;">
-            ❤ Made in India | © 2025 GEOID STUDY CENTRE. All Rights Reserved.
+            ❤ Made in India | © 2026 GEOID STUDY CENTRE. All Rights Reserved.
         </p>
 
          <div style="margin: 40px 0 20px; padding-top: 20px; border-top: 1px solid rgba(255,255,255,0.1);">
@@ -1541,6 +1542,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
