--- a/index.html
+++ b/index.html
@@ -1317,6 +1317,7 @@
                 <a href="return.html">Return & Refund</a>
                 <a href="disclaimer.html">Disclaimer</a>
                 <a href="dev.html">Devloper Policy</a>
+                <a href="https://cerulean-banoffee-2a2d9c.netlify.app/">Old Website🌐</a>
             </div>
             <div>
                 <h4>Contact Info</h4>
@@ -1498,5 +1499,6 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
