--- a/notice.html
+++ b/notice.html
@@ -146,6 +146,7 @@
 
         .notice-desc {
             font-size: 1rem;
+            font-family:'Noto Serif Bengali', serif;
             color: #4a5568;
             line-height: 1.8;
             margin-bottom: 25px;
@@ -234,8 +235,22 @@
     </header>
 
     <div class="container">
-        <div class="notice-card" data-aos="fade-up">
+        <div class="notice-card" data.-aos="fade-up">
             <span class="notice-badge">NEW ANNOUNCEMENT</span>
+            <div class="notice-title"></div>
+            <div class="notice-date"><i class="far fa-calendar-alt"></i> 12 January 2026</div>
+            <div class="notice-desc">
+              <strong>We have contracted Shubhadip Cyber ​​Technology for the maintenance of our website.</strong>
+                আমরা আমাদের ওয়েবসাইট এর মেনটেন্সের জন্য শুভদীপ সাইবার টেকনোলজি এর সঙ্গে কন্ট্রাক্ট করা হয়েছে। 
+               
+          
+            </div>
+        </div>
+
+
+   
+        <div class="notice-card" data.-aos="fade-up">
+            <span class="notice-badge">ANNOUNCEMENT</span>
             <div class="notice-title">DEMO CLASS - CLASS 9 (2026)</div>
             <div class="notice-date"><i class="far fa-calendar-alt"></i> 24 November 2025</div>
             <div class="notice-desc">
@@ -267,8 +282,11 @@
         <div class="footer-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:15px; font-size:0.8rem;">
             <a href="#" style="color:#ccc; text-decoration:none;">Privacy Policy</a>
             <a href="#" style="color:#ccc; text-decoration:none;">Disclaimer</a>
-            <span style="color:var(--secondary)">v2.1.0</span>
+            <span style="color:var(--secondary)">V3.0.0</span>
         </div>
+
+         <a href='http://www.freevisitorcounters.com'>http://freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2cdf134db33f5db6d6b97703745e2adc5f4f9c97'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1467116/t/5"></script>
 
         <div class="dev-credit">
             DESIGNED & DEVELOPED BY 
