--- a/portal.html
+++ b/portal.html
@@ -202,7 +202,7 @@
                 <div style="width: 2px; height: 50px; background: var(--border);"></div>
                 <div class="date-item">
                     <h4>Registration Ends</h4>
-                    <p><strong></strong></p>
+                    <p><strong>14 February 2026</strong></p>
                 </div>
             </div>
         </div>
@@ -233,6 +233,7 @@
 </body>
 
 </html>
+
 
 
 
