--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="http://sukdebdas4.website3.me">Contact us</a></li>
                 <li><a href="commiunity.html">Commiunity</a></li>
-                <li><a href="portal.html" class="login-btn"><i class="fas fa-user-circle"></i> Student Login</a></li>
+                <li><a href="login.html" class="login-btn"><i class="fas fa-user-circle"></i> Student Login</a></li>
             </ul>
         </nav>
     </header>
@@ -1499,6 +1499,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
