--- a/portal.html
+++ b/portal.html
@@ -1,239 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEOID STUDY CENTRE - Student Portal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        :root {
-            --bg: #0b0e14;
-            --card-bg: #161b22;
-            --accent: #ff0055; 
-            --accent-glow: rgba(255, 0, 85, 0.3);
-            --text: #e6edf3;
-            --text-dim: #8b949e;
-            --border: rgba(255, 255, 255, 0.05);
-        }
+<meta charset="UTF-8">
+<title>Geoid Study Centre | Student Portal (Mobile Legacy)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-        body { background-color: var(--bg); color: var(--text); line-height: 1.6; }
+<style>
+/* ===== GLOBAL STYLES ===== */
+body {
+    margin: 0;
+    font-family: "Times New Roman", Times, serif;
+    background: #008080; /* Windows Teal */
+    color: #000;
+}
 
-        /* --- Header --- */
-        .header {
-            background: rgba(11, 14, 20, 0.95);
-            backdrop-filter: blur(15px);
-            padding: 1.5rem 2rem;
-            position: sticky; top: 0; z-index: 1000;
-            border-bottom: 1px solid var(--border);
-        }
+/* ===== HEADER ===== */
+.header {
+    background: #000080;
+    color: white;
+    padding: 10px;
+    border-bottom: 3px double #ffffff;
+    text-align: center;
+}
+.header h1 { font-size: 1.5rem; margin: 5px 0; }
+.header img {
+    max-width: 100%;
+    height: auto;
+    border: 2px solid #fff;
+}
 
-        .header-top {
-            display: flex; justify-content: space-between;
-            align-items: center; flex-wrap: wrap; margin-bottom: 1rem;
-        }
+/* ===== LAYOUT ===== */
+.wrapper {
+    display: flex;
+    flex-direction: row; /* Default Desktop */
+    max-width: 1000px;
+    margin: 10px auto;
+    background: #c0c0c0;
+    border: 3px outset #fff;
+    min-height: 500px;
+}
 
-        .logo {
-            font-size: 1.8rem; font-weight: bold;
-            color: var(--accent); text-shadow: 0 0 15px var(--accent-glow);
-            letter-spacing: 2px;
-        }
+/* ===== SIDEBAR ===== */
+.sidebar {
+    width: 160px;
+    background: #d4d0c8;
+    border-right: 2px inset #fff;
+    padding: 10px 5px;
+}
+.sidebar a {
+    display: block;
+    color: #000;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+    margin-bottom: 5px;
+    border: 2px outset #fff;
+    background: #c0c0c0;
+    text-align: center;
+}
 
-        .location { font-size: 0.9rem; color: var(--text-dim); }
+/* ===== CONTENT ===== */
+.content {
+    flex: 1;
+    padding: 10px;
+    background: #fff;
+    margin: 10px;
+    border: 2px inset #808080;
+    overflow-x: hidden; /* Prevent mobile horizontal scroll */
+}
 
-        .nav { display: flex; justify-content: center; flex-wrap: wrap; gap: 1rem; }
-        .nav a {
-            color: var(--text-dim); text-decoration: none; font-weight: 500;
-            padding: 0.6rem 1.2rem; border-radius: 25px; transition: 0.3s;
-            background: rgba(255, 255, 255, 0.03); border: 1px solid var(--border);
-        }
-        .nav a:hover { color: #fff; background: var(--accent); border-color: var(--accent); }
+/* ===== PORTAL ELEMENTS ===== */
+.portal-box { border: 1px solid #000; margin-bottom: 10px; }
+.portal-title {
+    background: linear-gradient(90deg, #000080, #1084d0);
+    padding: 4px 8px;
+    font-weight: bold;
+    color: #fff;
+    font-size: 14px;
+}
+.notice { margin-bottom: 15px; border: 1px solid #808080; }
+.notice-title { background: #ffff00; padding: 3px; font-weight: bold; }
+.notice-box { height: 40px; padding: 5px; overflow: hidden; }
 
-        /* --- Hero Section --- */
-        .hero {
-            padding: 6rem 2rem; text-align: center;
-            background: linear-gradient(to bottom, rgba(255,0,85,0.1), transparent);
-        }
-        .hero h1 { font-size: 3.5rem; margin-bottom: 0.5rem; color: #fff; letter-spacing: 2px; }
-        .hero p { font-size: 1.2rem; color: var(--text-dim); }
+.login {
+    border: 2px outset #fff;
+    background: #d4d0c8;
+    padding: 15px;
+    width: 90%;
+    max-width: 300px;
+    margin: 0 auto;
+}
+.login input {
+    width: 100%;
+    margin-bottom: 10px;
+    border: 2px inset #fff;
+    padding: 8px 4px; /* Larger for touch */
+    box-sizing: border-box;
+}
+.login button, .dashboard button, #signup-view button {
+    background: #c0c0c0;
+    border: 2px outset #fff;
+    padding: 8px 15px;
+    cursor: pointer;
+    font-weight: bold;
+    width: 100%; /* Full width buttons on mobile */
+}
 
-        /* --- Grid Content --- */
-        .container { max-width: 1300px; margin: 0 auto; padding: 4rem 2rem; }
-        
-        .main-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
+footer {
+    text-align: center;
+    background: #c0c0c0;
+    padding: 10px;
+    border-top: 2px solid #808080;
+    font-size: 12px;
+}
 
-        .card {
-            background: var(--card-bg);
-            padding: 2.5rem;
-            border-radius: 24px;
-            border: 1px solid var(--border);
-            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            position: relative;
-            overflow: hidden;
-        }
+.hidden { display: none; }
 
-        .card:hover {
-            transform: translateY(-12px);
-            border-color: var(--accent);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-        }
-
-        .card-icon {
-            width: 60px; height: 60px;
-            background: rgba(255, 0, 85, 0.1);
-            border-radius: 15px;
-            display: flex; align-items: center; justify-content: center;
-            font-size: 1.8rem; color: var(--accent);
-            margin-bottom: 20px;
-        }
-
-        .card h3 { font-size: 1.5rem; margin-bottom: 15px; color: #fff; }
-        .card p { color: var(--text-dim); margin-bottom: 25px; font-size: 0.95rem; }
-
-        .btn {
-            display: inline-block;
-            background: var(--accent);
-            color: white;
-            padding: 12px 30px;
-            text-decoration: none;
-            border-radius: 50px;
-            font-weight: 600;
-            transition: 0.3s;
-            box-shadow: 0 5px 15px var(--accent-glow);
-        }
-
-        .btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 25px var(--accent-glow);
-        }
-
-        /* --- Timeline Section --- */
-        .timeline-box {
-            background: linear-gradient(135deg, rgba(255,0,85,0.05), var(--card-bg));
-            border-radius: 30px; padding: 50px; text-align: center;
-            margin-top: 60px; border: 1px solid rgba(255,0,85,0.2);
-        }
-
-        .dates-flex {
-            display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; margin-top: 30px;
-        }
-
-        .date-item h4 { color: var(--accent); font-size: 0.8rem; text-transform: uppercase; margin-bottom: 5px; }
-        .date-item p { font-size: 1.4rem; font-weight: 700; color: #fff; }
-
-        /* --- Footer --- */
-        .footer {
-            background: #05070a; padding: 4rem 2rem; border-top: 1px solid var(--border);
-            text-align: center; margin-top: 80px;
-        }
-
-        .footer-grid {
-            display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            max-width: 1100px; margin: 0 auto 40px; gap: 40px;
-        }
-
-        .footer-col h3 { color: var(--accent); margin-bottom: 20px; font-size: 1.1rem; }
-        .footer-col a { display: block; color: var(--text-dim); text-decoration: none; margin-bottom: 10px; font-size: 0.9rem; }
-        .footer-col a:hover { color: var(--accent); }
-
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.5rem; }
-            .container { padding: 2rem 1rem; }
-        }
-    </style>
+/* ===== MOBILE RESPONSIVE OVERRIDES ===== */
+@media (max-width: 768px) {
+    .wrapper {
+        flex-direction: column; /* Stack sidebar on top of content */
+        margin: 5px;
+        min-height: auto;
+    }
+    .sidebar {
+        width: auto;
+        border-right: none;
+        border-bottom: 2px inset #fff;
+        display: grid;
+        grid-template-columns: 1fr 1fr; /* Two columns of buttons */
+        gap: 5px;
+    }
+    .sidebar a { margin: 0; }
+    .content { margin: 5px; }
+    .header h1 { font-size: 1.2rem; }
+}
+</style>
 </head>
+
 <body>
 
-    <header class="header">
-        <div class="header-top">
-            <div class="logo">GEOID STUDY CENTRE</div>
-            <div class="location">Contai, Purba Medinipur, WB</div>
-        </div>
-        <nav class="nav">
-            <a href="#">🏠 Home</a>
-            <a href="#">📚 Admission</a>
-            <a href="#">🎓 Student Portal</a>
-            <a href="#">📞 Contact</a>
-        </nav>
-    </header>
+<div class="header">
+    <img src="https://ik.imagekit.io/8v5m0fw9z/Blue%20and%20White%20Modern%20Coming%20Soon%20Email%20Header.png" alt="Header">
+    <div style="font-size: 11px; margin-top:5px;"><strong>STUDENT ERP PORTAL - V.3.1.0</strong></div>
+</div>
 
-    <section class="hero">
-        <h1>STUDENT PORTAL</h1>
-        <p>Welcome to GEOID Study Centre - Your Gateway to Academic Excellence</p>
-    </section>
+<div class="wrapper">
+    <div class="sidebar">
+        <a href="#">HOME</a>
+        <a href="#">FEES</a>
+        <a href="#">ATTEND</a>
+        <a href="#">EXAMS</a>
+        <a href="#">LIBRARY</a>
+        <a href="#">NOTICES</a>
+    </div>
 
-    <div class="container">
-        <div class="main-grid">
-            
-            <div class="card">
-                <div class="card-icon"><i class="fas fa-file-alt"></i></div>
-                <h3>Admission Guideline</h3>
-                <p>Admission Criteria & Guidelines for the academic session 2025-2026. Review all requirements before applying.</p>
-                <a href="#" class="btn">View Guide →</a>
-            </div>
+    <div class="content">
+        <div id="login-view">
+            <div class="portal-box">
+                <div class="portal-title">System.Login</div>
+                <div style="padding: 10px;">
+                    <div class="notice">
+                        <div class="notice-title">NEWS:</div>
+                        <div class="notice-box">
+                            <marquee scrollamount="3">Registration Open 2026! Data updates pending...</marquee>
+                        </div>
+                    </div>
 
-            <div class="card">
-                <div class="card-icon"><i class="fas fa-wallet"></i></div>
-                <h3>Fees Structure</h3>
-                <p>Complete class-wise fees breakdown including admission fees, monthly tuition, and resource costs.</p>
-                <a href="#" class="btn">Check Fees</a>
-            </div>
-
-            <div class="card">
-                <div class="card-icon"><i class="fas fa-user-graduate"></i></div>
-                <h3>Admission Portal</h3>
-                <p>Exclusive digital access for online applications, faculty management and new student registrations.</p>
-                <a href="form.html" class="btn">Enter Portal</a>
-            </div>
-
-        </div>
-
-        <div class="timeline-box">
-            <h2 style="font-size: 2rem; color: #fff;"><i class="fas fa-calendar-check" style="color: var(--accent);"></i> Important Dates</h2>
-            <div class="dates-flex">
-                <div class="date-item">
-                    <h4>Registration Starts</h4>
-                    <p>23 Dec 2025</p>
+                    <div class="login">
+                        <form id="login-form">
+                            <label>Email:</label><br>
+                            <input type="email" id="login-email" required><br>
+                            <label>Password:</label><br>
+                            <input type="password" id="login-password" required><br>
+                            <button type="submit">LOGIN</button>
+                        </form>
+                        <p style="font-size: 12px; text-align: center;">
+                            New? <a href="#" onclick="toggleAuth()">[Register]</a>
+                        </p>
+                        <div id="status-msg" style="color:red; font-size:12px; font-weight:bold;"></div>
+                    </div>
                 </div>
-                <div style="width: 2px; height: 50px; background: var(--border);"></div>
-                <div class="date-item">
-                    <h4>Registration Ends</h4>
-                    <p><strong>14 February 2026</strong></p>
+            </div>
+        </div><strong>Helpdesk :</strong><a> +91 8207084112</a>
+
+        <div id="signup-view" class="hidden">
+            <div class="portal-box">
+                <div class="portal-title">Register.exe</div>
+                <div style="padding:15px; background:#d4d0c8;">
+                    <form id="signup-form">
+                        Name: <input type="text" id="signup-name" style="width:100%; padding:8px; margin-bottom:10px;" required><br>
+                        Email: <input type="email" id="signup-email" style="width:100%; padding:8px; margin-bottom:10px;" required><br>
+                        Pass: <input type="password" id="signup-password" style="width:100%; padding:8px; margin-bottom:10px;" required><br>
+                        <button>SUBMIT</button>
+                    </form>
+                    <p style="text-align:center"><a href="#" onclick="toggleAuth()">Back to Login</a></p>
+                </div>
+            </div>
+        </div>
+
+        <div id="dashboard-view" class="hidden">
+            <div class="portal-box">
+                <div class="portal-title">User_Dashboard.sys</div>
+                <div style="padding:15px;">
+                    <h3 style="text-decoration: underline;">Welcome</h3>
+                    <p><b>NAME:</b> <span id="d-name"></span></p>
+                    <p><b>EMAIL:</b> <span id="d-email"></span></p>
+                    <hr>
+                    <button onclick="logout()">LOGOUT / EXIT</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <footer class="footer">
-        <div class="footer-grid">
-            <div class="footer-col">
-                <h3>📧 Email</h3>
-                <p style="color: var(--text-dim);">geoidstudycentre@gmail.com</p>
-            </div>
-            <div class="footer-col">
-                <h3>📞 Contact</h3>
-                <p style="color: var(--text-dim);"><br>+91 8207084112</br>Contai, Purba Medinipur<br>West Bengal, 721401</p>
-            </div>
-            <div class="footer-col">
-                <h3>🔗 Quick Links</h3>
-                <a href="#">Academic Calendar</a>
-                <a href="#">Holiday List</a>
-                <a href="#">Contact Us</a>
-            </div>
-        </div>
-        <div style="border-top: 1px solid var(--border); padding-top: 30px; color: #555; font-size: 0.8rem;">
-            Developed by Subhadip Satpati | © 2025 GEOID STUDY CENTRE
-        </div>
-    </footer>
+<footer>
+    <strong>© 2026 GEOID STUDY CENTRE. All Rights Reserved.</strong> 
+     <p>Designed By:</p><a href="https://subha418-ss.github.io/Subhadip-Satpati/">Subhadip Cyber Technology</a>
+</footer>
 
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script>
+const supabaseUrl = "https://vokowckwmrrlqzvfcxcl.supabase.co";
+const supabaseKey = "sb_publishable_oZMLBAUIUbepAtUeThvT7w_DP7Kaj5N";
+const sb = supabase.createClient(supabaseUrl, supabaseKey);
+
+const loginView = document.getElementById("login-view");
+const signupView = document.getElementById("signup-view");
+const dashboardView = document.getElementById("dashboard-view");
+const statusMsg = document.getElementById("status-msg");
+
+function toggleAuth(){
+    loginView.classList.toggle("hidden");
+    signupView.classList.toggle("hidden");
+}
+
+function showDashboard(user){
+    loginView.classList.add("hidden");
+    signupView.classList.add("hidden");
+    dashboardView.classList.remove("hidden");
+    document.getElementById("d-name").innerText = user.user_metadata?.full_name || "User";
+    document.getElementById("d-email").innerText = user.email;
+}
+
+(async()=>{
+    const { data } = await sb.auth.getUser();
+    if(data.user) showDashboard(data.user);
+})();
+
+document.getElementById("login-form").addEventListener("submit", async e=>{
+    e.preventDefault();
+    statusMsg.innerText = "Checking...";
+    const { data, error } = await sb.auth.signInWithPassword({ 
+        email: document.getElementById("login-email").value, 
+        password: document.getElementById("login-password").value 
+    });
+    if(error) statusMsg.innerText = error.message;
+    else showDashboard(data.user);
+});
+
+document.getElementById("signup-form").addEventListener("submit", async e=>{
+    e.preventDefault();
+    const { error } = await sb.auth.signUp({
+        email: document.getElementById("signup-email").value,
+        password: document.getElementById("signup-password").value,
+        options:{ data:{ full_name: document.getElementById("signup-name").value } }
+    });
+    if(error) alert(error.message);
+    else { alert("Success! Please login."); toggleAuth(); }
+});
+
+async function logout(){
+    await sb.auth.signOut();
+    location.reload();
+}
+</script>
 </body>
-
 </html>
-
-
-
-
