--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name='dmca-site-verification' content='WGNvL3d4dUp3RHFNM2FJMytHUlU5Nm9HcXZoN3UyTWF0UU9vYytTZ0RkYz01' />
     <title>GEOID STUDY CENTRE | Premium Learning</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Noto+Serif+Bengali:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -1680,6 +1680,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
