--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="portal.html">Student Portal</a></li>
                 <li><a href="course.html">Courses</a></li>
-                <li><a href="http://sukdebdas4.website3.me">Contact us</a></li>
+                <li><a href="https://site-cg7be8tum.godaddysites.com/">Alumni</a></li>
                 <li><a href="commiunity.html">Commiunity</a></li>
                 <li><a href="login.html" class="login-btn"><i class="fas fa-user-circle"></i> Student Login</a></li>
             </ul>
@@ -1503,6 +1503,7 @@ Publisher : GEOID STUDY CENTRE
                 <a href="disclaimer.html">Disclaimer</a>
                 <a href="dev.html">Devloper Policy</a>
                 <a href="https://cerulean-banoffee-2a2d9c.netlify.app/">Old Website🌐</a>
+                <a href="https://site-cg7be8tum.godaddysites.com/">Alumni<a/>
             </div>
             <div>
                 <h4>Contact Info</h4>
@@ -1736,6 +1737,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
