--- a/index.html
+++ b/index.html
@@ -1503,9 +1503,9 @@ Publisher : GEOID STUDY CENTRE
                 <a href="return.html">Return & Refund</a>
                 <a href="disclaimer.html">Disclaimer</a>
                 <a href="dev.html">Devloper Policy</a>
-                <a href="https://cerulean-banoffee-2a2d9c.netlify.app/">Old Website🌐</a>
+                <a href="https://site-wjeinz215.godaddysites.com/">Old Website🌐</a>
                 <a href="https://subha418-ss.github.io/geoidstudycentrealumni.com/">Alumni</a>
-                <a href="https://site-cg7be8tum.godaddysites.com/">Alumni<a/>
+                <a href="https://site-cg7be8tum.godaddysites.com/">Alumni(old)<a/>
             </div>
             <div>
                 <h4>Contact Info</h4>
@@ -1739,6 +1739,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
