--- a/index.html
+++ b/index.html
@@ -1492,7 +1492,7 @@ Publisher : GEOID STUDY CENTRE
             <div>
                 <h3 style="color:var(--secondary); margin-bottom:20px;">GEOID STUDY CENTRE</h3>
                 <p style="font-size: 0.9rem; color:#bdc3c7;">Leading the way in Geographic education since inception. Join us to reshape your future.</p>
-                <strong>Last Update : 14 January 2026</strong>
+                <strong>Last Update : 20 January 2026</strong>
                 <a href='http://www.freevisitorcounters.com'>.</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=cb0bec80934c7d2147ccb74a86b1c0a3e9a9bc8e'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1467237/t/0"></script>   
 
@@ -1503,6 +1503,7 @@ Publisher : GEOID STUDY CENTRE
                 <a href="return.html">Return & Refund</a>
                 <a href="disclaimer.html">Disclaimer</a>
                 <a href="dev.html">Devloper Policy</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQAHl3lCZrumQlCQb-wsY7Kh_866kNOeBOzzL0YjuYiAGBYPGIIRV9d-QEdcsE4rAfcuyW-4Oo0Yrax/pubhtml?gid=0&single=true">Admin<a/>
                 <a href="https://site-wjeinz215.godaddysites.com/">Old Website🌐</a>
                 <a href="https://subha418-ss.github.io/geoidstudycentrealumni.com/">Alumni</a>
                 <a href="https://site-cg7be8tum.godaddysites.com/">Alumni(old)<a/>
@@ -1739,6 +1740,7 @@ updateVisitorDisplay();
 </body>
 
 </html>
+
 
 
 
