--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prabhat Kumar College, Contai</title>
+    <title>Geoid Study Centre, Contai</title>
     <style>
         body {
             /* Setting the font to Times New Roman */
@@ -102,3 +102,4 @@
 
 </body>
 </html>
+
