--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
         </a>
     </div>
 
-    <a href="#" class="home-link">Go to Main Home Page</a>
+    <a href="https://subha418-ss.github.io/geoidstudycentrenew/" class="home-link">Go to Main Home Page</a>
 
 </body>
 </html>
+
 
