--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
 
     <div class="links-container">
         <a href="#" class="link-item">
-            <img src="https://img.icons8.com/color/48/new.png" alt="New" class="badge-new">
+            <img src="https://indiapostgdsonline.gov.in/images/new.gif.png" alt="New" class="badge-new">
             Online Admission Portal 2025-2026
         </a>
         
         <a href="#" class="link-item">
-            <img src="https://img.icons8.com/color/48/new.png" alt="New" class="badge-new">
+            <img src="https://indiapostgdsonline.gov.in/images/new.gif.png" alt="New" class="badge-new">
            Academic Mock Test 2026
         </a>
 
         <a href="#" class="link-item">
-            <img src="https://img.icons8.com/color/48/new.png" alt="New" class="badge-new">
+            <img src="https://indiapostgdsonline.gov.in/images/new.gif.png" alt="New" class="badge-new">
             Registration for Alumni Association
         </a>
 
         <a href="#" class="link-item">
-            <img src="https://img.icons8.com/color/48/new.png" alt="New" class="badge-new">
+            <img src="https://indiapostgdsonline.gov.in/images/new.gif.png" alt="New" class="badge-new">
             Payment link (for students only)
         </a>
     </div>
@@ -102,5 +102,6 @@
 
 </body>
 </html>
+
 
 
