--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GEOID STUDY CENTRE - আপনার ডিজিটাল যাত্রায় এক অনন্য প্রিমিয়াম অভিজ্ঞতা।">
     <title>Geoid Study Centre, Contai</title>
     <style>
         body {
@@ -102,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
