--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="GEOID STUDY CENTRE - আপনার ডিজিটাল যাত্রায় এক অনন্য প্রিমিয়াম অভিজ্ঞতা।">
-    <title>Geoid Study Centre, Contai</title>
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GEOID STUDY CENTRE - আপনার ডিজিটাল যাত্রায় এক অনন্য প্রিমিয়াম অভিজ্ঞতা।">
+      <title>GEOID STUDY CENTRE | Premium Learning</title>
+    <meta property="og:title" content="GEOID STUDY CENTRE">
+    <meta property="og:description" content="Online Admission Portal, Mock Test, and more.">
+    <meta property="og:site_name" content="GEOID STUDY CENTRE">
     <style>
         body {
             /* Setting the font to Times New Roman */
@@ -74,7 +77,7 @@
 
     <img src="https://deliberate-amber-gfvdqe4djb.edgeone.app/logo.jpg" alt="College Logo" class="logo">
 
-    <h1>GEOID STUDY CENTRE</h1>
+    <h1>GEOID STUDY CENTRE | Premium Learning</h1>
 
     <div class="links-container">
         <a href="#" class="link-item">
@@ -102,6 +105,7 @@
 
 </body>
 </html>
+
 
 
 
